Move systemctl & last cert time upload to Py

--- a/syno-cert-update.ini
+++ b/syno-cert-update.ini
@@ -19,3 +19,7 @@ debug = True
 [docker]
 docker_swag_le_live_dir = /volume1/docker/swag/etc/letsencrypt/live
 debug = True
+
+[control]
+# reload or restart
+systemctl_nginx_cmd = reload
